--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1"
   }
 }
