--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "watch 'npm run build' src",
     "watch": "watch 'npm run build' ../rebottle",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -25,6 +24,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "node-sass": "^7.0.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
